# tournaments

./: .cursorrules  .gitignore  AGENT_README.md  Cargo.toml  Dockerfile  README.md  TODO.md  TOURNAMENT_PLAN.md
.sqlx/: query-010a19c0482a029c432b90a0c7b95826d8f1c6473ec4b39afb6ce626233a21b2.json  query-07f22de44426e5005b042070e54abaa66e92653f8a53aa82f925a3f9c0d8da6d.json  query-0c93c1a93d3817901e49312fdd522a1d97ff206acc85cffe6bae071dd7a11952.json  query-0e0d365156341fa13d75a20f26d3c0c807a396673cc12347691ced0170f7addf.json  query-13042c14d5a6b0332865d69aa85bebf7eedcaf43c177f9a846db5fe0d122df84.json  query-17bf1431e776c85b576e6d03aeb9475aa4db89ee7a289c3948fc832b92b722ec.json  query-1883f206badf2b09aff400f7fd21132525bb854ff84ee06b307fae05ead7e7ce.json  query-1a411b20d77c0607bddce58fcfe618c7e08415b9e89840286c0cd0e20c176458.json  query-1b261132d1b1bb502e79f95d13aa947e9bd6f01f8da3d699128fdc666970ebe5.json  query-1e3c447472eb99123b8b5972911c8662c65314acedacaa978378dd002dec1943.json  query-1fa5bdac83bc307cb6e72f996fb37324fa04cf7f4f515b2584317abe538f0007.json  query-20e8f1c7d02e01005374def7076879e8a91a01255044c5ad6325afbc3ff661c9.json  query-216d6e1e050bf0c94ca132ee3f491d4303a64b73b07d040ce6004d88ae885405.json  query-242edfe92420372594e633c84d870989d22f2c1b3b73acfeb6c1ec1c91be1c24.json  query-27523a2da02786d1529d6660fad3aad2d3b5ac056c60a7728c6cf9127b95652b.json  query-29bc96ec90b2f612a482b0cc1035a6969362d9846d27d8c20abe3b519cbf383f.json  query-2ac86e19d308068d37704f803109749e94e20034879673ae58ca1f632ffb380e.json  query-2bb994c961b93992d2cbf212de45b32fd20ea9c3bd1d63d4be3555ef17cfa299.json  query-2dba651512d550238f538c2ca5b6e4b2dc19db33d21e6f87a817c57a05082a57.json  query-2e0060a8aa9a47b87cc46673acce7b290115b71baed0c3d7694d3f7ded271262.json  query-325ba849b046d64ac214a19b087289338db276c8d60b414f086d99c8147a9fe5.json  query-33307ebcd78c2f21be51983978202eb1ab76df3d214a19241d870fafbb299582.json  query-33325d7d3df6cc33a392fe7d49c52f04d26aaafecc5a62dd32734a3b2cd0ca7a.json  query-33fb155b2d43a6ad49e8b08a56601bcebb396c2d5f22c2cff9280f1a794356c0.json  query-345f3782206bb422c5db3d101c7e0e1438e2ad182deeea8e7426477acec7e484.json  query-351744ffc4b85ce4dfc4dac0149c7168f09ecf44e0dc29f9cf001441ee477798.json  query-359abc4e73cf5104fefbc69cf7c6ea9c818ef79f15a0afe114ffd1c320c6423b.json  query-374e97a0a70bca4ec67de7bbfc3d02c19408c5efff9766dfbfd66920b10f9992.json  query-3779672c58c51bc4ad56152b74a0a552db7140b0f08159584e5af670a72edb0f.json  query-398a5e499c4053aab588944f8e9fc660a4c4797d916c29e1a8efad8e65f5d8b7.json  query-3b30e42383c57282c1b78bbeb64b0fd768d35354732660ba1c6f3518f6b2092e.json  query-3fa51ad84bac58714ff6cc207fe38794098d959a94c80eb043b3875685f0de0c.json  query-40bcafcf8a9a5982395048120811bae67a8dbbf0bab46f7f67ee880bbd7f8692.json  query-44b34fac96cabc4f72ffa28375935755ef6f1ca64f84ff7946ec7cc94f37bd1a.json  query-485ab1df3f54f414b9375f8f7c656e2e3ff5aa8fcc62fad8456653d293153c75.json  query-49aab99abcab74ffb0c6da6a5c74cab341189b37393237ec678888c602615117.json  query-4b7870aaff134458a90f71e2f4e47f167257ca80bf2286a373fc8e72793a28b5.json  query-4de82d35f24eb1bf9bd6dc77a10726afd444145e2ed00e2700c7bb66d715ddf7.json  query-4f9681cf5efba7fafccbb44dc7c51c5841e667e0e68741b5bbe4c5abe03e2a7d.json  query-5211d4492924c4ba8ba1b516132b1d8293e42726159911c2bd45a513052ecdcb.json  (+76 more)
docs/: TRACEY_STATUS.md
e2e/: package-lock.json  package.json  playwright.config.ts
migrations/: 20231210151519_AddJobsTable.sql  20240228040146_AddCrons.down.sql  20240228040146_AddCrons.up.sql  20250411163517_CreateJobs.up.sql  20250411163527_CreateCron.up.sql  20250411184529_create_users.down.sql  20250411184529_create_users.up.sql  20250411214803_create_sessions.down.sql  20250411214803_create_sessions.up.sql  20250412013613_create_battlesnakes.down.sql  (+33 more)
mock-github-oauth/: Cargo.toml
mock-github-oauth/src/: lib.rs  main.rs  routes.rs  state.rs  types.rs
server/: Cargo.toml
server/src/: backup.rs  cookies.rs  cron.rs  engine_models.rs  errors.rs  flasher.rs  game_channels.rs  game_runner.rs  jobs.rs  lib.rs  main.rs  routes.rs  snake_client.rs  state.rs  static_assets.rs
server/src/cli/: config.rs  output.rs
server/src/components/: flash.rs  github_auth.rs  mod.rs  page.rs  page_factory.rs
server/src/engine/: frame.rs  game_state.rs  mod.rs  rules.rs  runner.rs  tests.rs
server/src/github/: auth.rs
server/src/models/: api_token.rs  battlesnake.rs  game.rs  game_battlesnake.rs  mod.rs  session.rs  turn.rs  user.rs
server/src/models/flow/: game_creation.rs  mod.rs
server/src/routes/: auth.rs  battlesnake.rs  board_viewer.rs  github_auth.rs  test_auth.rs
server/src/routes/api/: games.rs  mod.rs  snakes.rs  tokens.rs
server/src/routes/game/: api.rs  create.rs  mod.rs  view.rs
server/static/: styles.css  viewTransition.js
(+29 files in other folders)
