[package]
name = "mock-github-oauth"
version.workspace = true
edition.workspace = true

[dependencies]
axum = "0.8"
tokio = { version = "1.21", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_urlencoded = "0.7"
uuid = { version = "1.6.1", features = ["v4"] }
urlencoding = "2.1"
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.16", features = ["env-filter"] }
color-eyre = "0.6.2"
