[package]
name = "arena"
version = "0.1.0"
edition = "2024"

default-run = "arena"

build = "build.rs"

[dependencies]
tokio = { version = "1.21", features = ["full"] }
color-eyre = "0.6.2"

opentelemetry = { version = "0.22.0" }
opentelemetry_sdk = { version = "0.22.0", features = ["rt-tokio"] }
tracing = "0.1.37"
tracing-opentelemetry = "0.23.0"
tracing-subscriber = { version = "0.3.16", features = ["env-filter"] }
tracing-tree = "0.3.0"
opentelemetry-otlp = { version = "0.15.0", features = [
  "http-proto",
  "reqwest-rustls",
  "reqwest-client",
], default-features = false }
sentry = { version = "0.32.2", default-features = false, features = [
  "rustls",
  "backtrace",
  "contexts",
  "panic",
  "tower",
  "reqwest",
] }
sentry-tower = { version = "0.32.2", features = ["http"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
maud = { version = "0.27.0", features = ["axum"] }
async-trait = "0.1.60"
axum = { version = "0.8", features = ["ws"] }
axum-macros = "0.4.0"
tower-http = { version = "0.5.2", features = ["trace", "cors"] }
tower = "0.4.13"
reqwest = { version = "0.12.12", features = [
  "json",
  "rustls-tls",
  "multipart",
], default-features = false }

cja = { version = "0.0.0", git = "https://github.com/coreyja/cja", branch = "main" }
sqlx = "0.8"
uuid = { version = "1.6.1", features = ["v4"] }
time = "0.3.9"
futures = "0.3.30"
chrono = { version = "0.4.23", default-features = false, features = ["serde"] }
base64 = "0.21"
base64ct = { version = "1.6", features = ["alloc"] }
ring = "0.17"
rand = "0.8"
sha2 = "0.10"
tempfile = "3.8"
urlencoding = "2.1"
url = "2"
simple_asn1 = "0.6"
num-bigint = "0.4"
include_dir = "0.7.4"
mime_guess = "2.0.5"
google-cloud-storage = "0.22"
zstd = "0.13"
thiserror = "1"
hex = "0.4"
clap = { version = "4", features = ["derive"] }
dirs = "5"
toml = "0.8"
open = "5"
hostname = "0.4"

battlesnake-game-types = { git = "https://github.com/fables-tales/battlesnake-game-types", branch = "main" }
tokio-util = { version = "0.7.14", features = ["rt"] }

[lib]
name = "arena"
path = "src/lib.rs"

[[bin]]
name = "arena"
path = "src/main.rs"

[[bin]]
name = "arena-cli"
path = "src/bin/arena-cli.rs"

[build-dependencies]
vergen = { version = "8.3.1", features = [
  "build",
  "cargo",
  "git",
  "gitoxide",
  "rustc",
] }
